change version of node to 18

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "v16.15.1"
+    "node": "v18.12.1"
   },
   "engineStrict": true,
   "scripts": {
@@ -20,6 +20,8 @@
     "html-react-parser": "^3.0.4",
     "moment": "^2.29.4",
     "next": "13.0.7",
+    "node": "^16.18.1",
+    "npm": "^8.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
